feat: Switch to AWS JDK v2 (WIP)
WORK IN PROGRESS